lox-tests/tests/for/class_in_body.stderr
ERROR: at 'class': Expected expression, got Class
 --> 2:10
  |
2 | for (;;) class Foo {}
  |          ^---^
